<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     android:background="@drawable/background"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/syouhinmei" />
            <EditText
                android:id="@+id/InputEdittext_syouhin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="900.0px" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kingaku" />
            <EditText
                android:id="@+id/InputEditText_kingaku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="800.0px"
                android:inputType="number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basyo" />
            <EditText
                android:id="@+id/InputEditText_basyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="900.0px" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
				android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day" />
            <DatePicker
                android:id="@+id/InputDatePicker_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture" />
            <ImageButton
                android:id="@+id/InputButton_camera"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/InputButton_back"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18.0dip"
        android:layout_alignLeft="@id/linearLayout1"
        android:layout_alignParentBottom="true" />
    <ImageButton
        android:id="@+id/InputButton_save"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16.0dip"
        android:layout_alignRight="@id/linearLayout1"
        android:layout_alignParentBottom="true" />
    <ImageView
        android:id="@+id/InputMassan"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="50.0px"
		android:width="50.0px"
		android:layout_alignTop="@id/InputButton_back"
	 	android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/photo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/InputMassan"
        android:src="@android:drawable/sym_def_app_icon" />

</RelativeLayout>